[project]
name = "rantvent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.3",
    "google-genai>=1.52.0",
    "passlib>=1.7.4",
    "praat-parselmouth>=0.4.6",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
]
